--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <img src="img/croissant-04-01.png" alt="Croissant gigante">
     </div>
 
-    <!-- Texto grande "Productos" repetido como fondo -->
+    <!-- Texto "Productos" repetido como fondo -->
     <div class="productos-bg" aria-hidden="true">
       <p>Productos</p>
       <p>Productos</p>
@@ -85,7 +85,7 @@
   <section class="promos">
     <div class="promos-wrapper">
 
-      <!-- Imágenes decorativas detrás del encabezado (stickers/panes) -->
+      <!-- Imágenes detrás del encabezado-->
       <div class="promos-images" aria-hidden="true">
         <img src="img/isologo blanco-01.png" alt="logo 1">
         <img src="img/isologo morada-01.png" alt="logo 2">
@@ -94,15 +94,15 @@
         <img src="img/isologo morado-02.png" alt="logo 4">
       </div>
 
-      <!-- Encabezado con rectángulo negro y título rotado -->
+      <!-- Encabezado sección -->
       <div class="promos-header">
         <h2 class="promos-title">PROMOS!!</h2>
       </div>
 
-      <!-- NUEVO: contenedor para las dos promos gráficas -->
+      <!-- contenedor para las dos promos  -->
       <div class="promos-banners" aria-label="Promociones">
         <div class="promo-item">
-          <!-- reemplaza el nombre de la imagen si la guardaste diferente -->
+       
           <img src="/img/publicidad01 (2).png" alt="Promo Compra Ahora">
         </div>
 
@@ -113,6 +113,38 @@
 
     </div>
   </section>
+  
+<!-- SECCIÓN NOSOTROS -->
+<section class="nosotros">
+  <div class="nosotros-header">
+    <!-- Texto fondo doble -->
+    <h2 class="nosotros-title base">Nosotros</h2>
+
+    <!-- Imagen pan en medio -->
+    <img src="/img/triangulo pan-01.png" alt="Pan decorativo" class="nosotros-pan">
+
+    <h2 class="nosotros-title angled especial">
+      Nosotros
+      <span class="underline"></span>
+    </h2>
+  </div>
+
+  <!-- Contenido  -->
+  <div class="nosotros-content">
+    <div class="nosotros-col logo-side">
+      <img src="/img/logo vertical-01.png" alt="Logo croissant rebelde" class="nosotros-logo">
+    </div>
+    <div class="nosotros-col text-side">
+      <h3 class="nosotros-subtitle">Nuestro origen</h3>
+      <p>
+        El croissant rebelde nace en una clase de diseño en la que se escogió el tema 
+        y salió esta gran idea.
+      </p>
+    </div>
+  </div>
+</section>
+
+
 
 </body>
 </html>
