--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@700&family=Varela+Round&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -140,6 +142,36 @@
         El croissant rebelde nace en una clase de diseño en la que se escogió el tema 
         y salió esta gran idea.
       </p>
+    </div>
+  </div>
+</section>
+
+<!-- SECCIÓN CONTACTO Y UBICACIÓN -->
+<section class="contacto">
+  <div class="overlay"></div>
+  <div class="contacto-contenido">
+
+    <!-- Título principal -->
+    <h2 class="contacto-title">
+      Contacto <br><span>y ubicación</span>
+    </h2>
+
+    <!-- Subtítulo -->
+    <p class="contacto-subtitle">
+      Ven a vivir una experiencia única
+    </p>
+
+    <!-- Info -->
+    <div class="contacto-info">
+      <p><i class="fas fa-map-marker-alt"></i> Dirección: Calle 123 #45-67</p>
+      <p><i class="fas fa-phone-alt"></i> +57 300 000 0000</p>
+      <p><i class="fas fa-clock"></i> Lunes a sábado de 6:00 am a 8:00 pm</p>
+    </div>
+
+    <!-- Footer -->
+    <div class="contacto-footer">
+      <img src="/img/logo vertical-01.png" alt="Logo" class="logo">
+      <p><span class="copy">©</span> Todos los derechos reservados</p>
     </div>
   </div>
 </section>
